# sidex

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
crates/sidex-auth/: Cargo.toml
crates/sidex-auth/src/: lib.rs  storage.rs
crates/sidex-dap/src/: client.rs  session.rs
crates/sidex-db/src/: db.rs  history.rs  state.rs
crates/sidex-extension-api/src/: env_api.rs  lib.rs  message_handler.rs  types.rs
crates/sidex-extensions/: Cargo.toml
crates/sidex-extensions/src/: contributions.rs  host.rs  lib.rs  marketplace.rs  protocol.rs  tree_view.rs  vsix.rs  webview_host.rs
crates/sidex-git/src/: diff.rs  log.rs  operations.rs
crates/sidex-keymap/src/: context.rs  defaults.rs  keybinding.rs  keyboard_shortcut_editor.rs  lib.rs  (+1 more)
crates/sidex-profiles/: Cargo.toml
crates/sidex-profiles/src/: lib.rs
crates/sidex-textmate/: Cargo.toml
crates/sidex-textmate/src/: diff_state_stacks.rs  lib.rs  matcher.rs  metadata.rs  parse_raw_grammar.rs  regex.rs  registry.rs  theme.rs  utils.rs
crates/sidex-textmate/src/grammar/: attr_stack.rs  balanced_brackets.rs  basic_attrs.rs  e2e_tests.rs  grammar_core.rs  init.rs  line_fonts.rs  line_tokens.rs  mod.rs  state_stack.rs  tokenize.rs
crates/sidex-textmate/src/rule/: factory.rs  include.rs  mod.rs  raw.rs  regex_source.rs  rules.rs  source_list.rs
crates/sidex-textmate/src/theme/: rule.rs  scope.rs  trie.rs
crates/sidex-textmate/src/tokenizer/: contracts.rs  hot_path.rs  mod.rs  tests.rs
crates/sidex-update/: Cargo.toml
infrastructure/marketplace-proxy/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
scripts/: generate-extension-meta.js  setup-extensions.sh
src/: bootstrap-globals.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extension-host/: host.cjs  server.cjs
src-tauri/src/: lib.rs
(+150 files in other folders)
