[package]
name = "sidex-extensions"
description = "Extension host management for SideX — Node.js extension host + WASM extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
walkdir = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "brotli"] }
zip = "2"
tempfile = "3"
toml = "0.8"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
which = "7"

[lints]
workspace = true
