[package]
name = "sidex-textmate"
description = "Native Rust port of `vscode-textmate` for SideX."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
parking_lot = { workspace = true }
once_cell = "1"
plist = "1"
regex = { workspace = true }
# Oniguruma via FFI. `generate-bindings` is off so we link the bundled
# `libonig` shipped with the `onig-sys` crate, avoiding a system dep.
onig = { version = "6.5", default-features = false }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
